# SFML-3

./: .gitignore  CMakeLists.txt  CMakePresets.json  GUI.cpp  GUI.hpp  Save.cpp  Save.hpp  Utils.cpp  Utils.hpp  errorHandling.cpp  errorHandling.hpp  main.cpp
saves/: test.txt
src/: Exceptions.hpp  GUI.cpp  GUI.hpp  GUITexturesLoader.cpp  GUITexturesLoader.hpp  Save.cpp  Save.hpp  Utils.cpp  Utils.hpp  main.cpp
src/GUI/: AdvancedInterface.cpp  AdvancedInterface.hpp  BasicInterface.cpp  BasicInterface.hpp  GUIWrappers.cpp  GUIWrappers.hpp  GraphicalResources.cpp  GraphicalResources.hpp  GraphicalRessources.cpp  GraphicalRessources.hpp  InteractiveInterface.cpp  InteractiveInterface.hpp  MutableInterface.cpp  MutableInterface.hpp  basicGUI.cpp  basicGUI.hpp
